--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -1,12 +1,116 @@
-/*
- * Base structure
- */
+/*  Created by Gelieke Steeghs, copyright 2017.
+    This code is for a dashboard web interface for Tonnie, the smart rainwater buffering system.
+    The interface shows different charts and graphs which are created with JavaScript library D3 v4.
+    The grid of the interface is made with Bootstrap v3.3.7, jQuery and Moment.js.
+    The map is created with Leaflet v1.0.3 and the date range picker is retrieved from www.daterangepicker.com.
+
+    This is the stylesheet called dashboard.css, where all relevant dashboard CSS styles are defined.   */
 
 /* Move down content because we have a fixed navbar that is 50px tall */
 body {
   padding-top: 50px;
+  font-family: DINPro; !important
 }
 
+/*
+ * Dashboard style municipality
+ */
+
+::selection {
+  background: transparent; /* WebKit/Blink Browsers */
+}
+::-moz-selection {
+  background: transparent; /* Gecko Browsers */
+}
+
+.a .navbar-brand {
+    color: #2a3f54;
+}
+
+.leaflet-control-attribution leaflet-control {
+    display: none;
+}
+
+.h3, h3 {
+    background: #1abb9c;
+    color: #2a3f54;
+    padding: 5px;
+    margin: 0px;
+}
+
+.h4, h4 {
+    margin-left: 10px;
+    font-size: 15pt;
+}
+
+.whitebox {
+    background: #fff;
+    margin: 15px;
+    margin-top: 0px;
+    padding-right: 0px;
+    padding-left: 0px;
+    -webkit-box-shadow: 0px 2px 23px -16px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 2px 23px -16px rgba(0,0,0,0.75);
+    box-shadow: 0px 2px 23px -16px rgba(0,0,0,0.75);
+}
+
+button {
+    outline: none;
+}
+
+.col-md-8 {
+    width: 62%;
+    margin-right: 5px;
+}
+
+.col-md-6 {
+    width: 47.7%;
+    margin-right: 5px;
+}
+
+.row {
+    margin-left: 0px;
+}
+
+.bluegreen {
+    background-color: #1abb9c;
+}
+
+.shadow {
+    -webkit-box-shadow: 0px 2px 23px -16px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 2px 23px -16px rgba(0,0,0,0.75);
+    box-shadow: 0px 2px 23px -16px rgba(0,0,0,0.75);
+}
+
+#mapid { 
+    height: 200px; 
+    width: 250px;
+    margin-top: 20px;
+}
+
+#status {
+    width: 200px;
+    height: 50px;
+    background-color: #fff;
+    font-size: 12pt;
+    padding: 10px;
+    text-align: center;
+}
+
+/* Style for the map polygons */
+
+.hoverstyle:hover {
+    fill: #2c81bf;
+}
+
+.leaflet-tooltip {
+    background-color: transparent;
+    border: none;
+    box-shadow: none;
+    font-weight: bold;
+    color: white;
+    font-family: DINPro;
+}
 
 /*
  * Global add-ons
@@ -84,7 +188,6 @@ body {
   margin-top: 0;
 }
 
-
 /*
  * Placeholder dashboard ideas
  */
@@ -102,4 +205,29 @@ body {
 .placeholder img {
   display: inline-block;
   border-radius: 50%;
+}
+
+/*
+ * Axes D3
+ */
+.axis text {
+  font-family: DINPro;
+  font-size: 10pt;
+}
+
+.axis path,
+.axis line {
+  fill: none;
+  stroke: #000;
+  shape-rendering: crispEdges;
+}
+
+/*
+ * Fonts
+ */
+
+@font-face {
+    font-family: DINPro;
+    src: url(../fonts/dinpro-regular.otf);
+    
 }
